--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1103,7 +1103,36 @@ section,
 .about .about-content p:last-child {
   margin-bottom: 0;
 }
+@media (max-width: 1000px) {
+  .about .about-content h3 {
+    font-weight: 700;
+    font-size: 23px;
+  }
+  
+  .about .about-content ul h4 {
+    font-size: 16px;
+    font-weight: 600;
+  }
 
+  .about .about-content ul i {
+    background: var(--surface-color);
+    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 44px;
+    height: 44px;
+    font-size: 20px;
+    margin-right: 15px;
+    color: var(--accent-color);
+    border-radius: 50px;
+  }
+  
+  .about .about-content ul p {
+    font-size: 13px;
+  }
+}
 /*--------------------------------------------------------------
 # Skills Section
 --------------------------------------------------------------*/
