--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1118,6 +1118,16 @@ section,
 .about .about-content p:last-child {
   margin-bottom: 0;
 }
+.see-more{
+  width: 150px;
+  padding: 1rem;
+  background-color: var(--accent-color);
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  color: white;
+  font-weight: 500;
+}
 @media (max-width: 1000px) {
   .about .about-content h3 {
     font-weight: 700;
